Add filtering and get rid of picklist

--- a/_site-localhost-esri/index.html
+++ b/_site-localhost-esri/index.html
@@ -33,7 +33,7 @@
                     </calcite-segmented-control>
                 </div>
                 <div class="container">
-                    <calcite-select id="segIdSelect"></calcite-select>
+                    <calcite-select id="selectSegId"></calcite-select>
                 </div>
                 <h1>data & charts</h1>
                 <a target="_blank" href="https://developers.arcgis.com/javascript/latest/sample-code/sandbox/?sample=arcade-execute-chart">3rd party chart-sample</a>
