--- a/_site-traffic-volume-map/index.html
+++ b/_site-traffic-volume-map/index.html
@@ -61,13 +61,13 @@
 </head>
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4TRJWDRN8M"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=H-4TRJWDRN8M"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-4TRJWDRN8M');
+  gtag('config', 'H-4TRJWDRN8M');
 </script>
 
 <body class="claro jimu-main-font">
