Add 2023 RTP SE data

--- a/_site-traffic-volume-map/widgets/ForecastSidebar/Widget.html
+++ b/_site-traffic-volume-map/widgets/ForecastSidebar/Widget.html
@@ -360,19 +360,19 @@
           <table width="330px;">
             <tr>
               <td align="center">
-                <p class="thick">2015</p>
+                <p class="thick">2019/p>
               </td>
               <td align="center">
-                <p class="thick">2019</p>
+                <p class="thick">2023</p>
               </td>
               <td align="center">
-                <p class="thick">2024</p>
+                <p class="thick">2028</p>
               </td>
               <td align="center">
-                <p class="thick">2030</p>
+                <p class="thick">2032</p>
               </td>
               <td align="center">
-                <p class="thick">2040</p>
+                <p class="thick">2042</p>
               </td>
               <td align="center">
                 <p class="thick">2050</p>
@@ -380,19 +380,19 @@
             </tr>
             <tr>
               <td width="55px;" align="center">
-                <div id="se2015value"></div>
-              </td>
-              <td width="55px;" align="center">
                 <div id="se2019value"></div>
               </td>
               <td width="55px;" align="center">
-                <div id="se2024value"></div>
+                <div id="se2023value"></div>
               </td>
               <td width="55px;" align="center">
-                <div id="se2030value"></div>
+                <div id="se2028value"></div>
               </td>
               <td width="55px;" align="center">
-                <div id="se2040value"></div>
+                <div id="se2032value"></div>
+              </td>
+              <td width="55px;" align="center">
+                <div id="se2042value"></div>
               </td>
               <td width="55px;" align="center">
                 <div id="se2050value"></div>
