Start adding unified plan to volume map

--- a/_site-traffic-volume-map/widgets/ForecastSidebar/Widget.html
+++ b/_site-traffic-volume-map/widgets/ForecastSidebar/Widget.html
@@ -9,7 +9,7 @@
           <td width="110px;">
             <div id="SE_CONTROL" class="unselectedWidget" style="padding: 5px;" data-dojo-attach-event="onClick: _selectSE"><div id="SE_ICON" class="pictureSE"><div class="tabcontrol">Pop/Emp<br/>Forecasts</div></div></div>
           </td>
-          <td width="110px;" style="display: none;">
+          <td width="110px;">
             <div id="UTP_CONTROL" class="unselectedWidget" style="padding: 5px; padding-right: 1px;" data-dojo-attach-event="onClick: _selectUTP"><div id="UTP_ICON" class="pictureUTP"><div class="tabcontrol">Unified&nbsp;Plan<br/>Projects</div></div></div>
           </td>
         </tr>
@@ -406,7 +406,7 @@
   <div id="UTP_SECTION" style="display: none;">
     <div id="myTableNodeUTP">
       <div class="wfrc-filter">
-        <table style="display: none;">
+        <table>
           <tbody>
             <tr>
               <td><p class="thick thicker">Project Modes</p></td>
@@ -443,7 +443,7 @@
         </table>
       </div>
       <div class="wfrc-filter">
-        <table style="display: none;">
+        <table>
           <tbody>
             <tr>
               <td><p class="thick thicker">Phasing (colors)</p></td>
