Update project plans module

--- a/_site-traffic-volume-map/widgets/ForecastSidebar/Widget.html
+++ b/_site-traffic-volume-map/widgets/ForecastSidebar/Widget.html
@@ -360,7 +360,7 @@
           <table width="330px;">
             <tr>
               <td align="center">
-                <p class="thick">2019/p>
+                <p class="thick">2019</p>
               </td>
               <td align="center">
                 <p class="thick">2023</p>
@@ -402,6 +402,8 @@
         </div>
       </div>
     </div>
+    <br/>
+    <p>For more detailed household and job information, please visit our <a href="https://unifiedplan.org/utah-household-job-forecast-map/" target="_vblank">Utah Household and Job Forecast Viewer</a>.</p>
   </div>
   <div id="UTP_SECTION" style="display: none;">
     <div id="myTableNodeUTP">
@@ -505,5 +507,7 @@
         </table>
       </div>
     </div>
+    <br/>
+    <p>For more detailed project information, please visit the <a href="https://experience.arcgis.com/experience/e2b10d6141cc4d91900f783dbdeefed5/" target="_vblank">Utah's Unified Plan 2023-2050</a>.</p>
   </div>
 </div>
