Fix utp colors in legend

--- a/_site-traffic-volume-map/widgets/ForecastSidebar/Widget.html
+++ b/_site-traffic-volume-map/widgets/ForecastSidebar/Widget.html
@@ -458,7 +458,7 @@
                 </label>
               </td>
               <td>
-                <div class="legend-swatch" style="background-color: #d73027"></div>
+                <div class="legend-swatch" style="background-color: #ed5151"></div>
               </td>
             </tr>
             <tr>
@@ -488,7 +488,7 @@
                 </label>
               </td>
               <td>
-                <div class="legend-swatch" style="background-color: #ffa484"></div>
+                <div class="legend-swatch" style="background-color: #f9a078"></div>
               </td>
             </tr>
           </tbody>
